macros/tests/trybuild/macro.rs
use serde_args_macros::help;

#[help]
macro_rules! foo {}

fn main() {}
